# enna-os

./: .gitignore  .gitmodules  Makefile.in  README.md  autogen.sh  configure.ac  fixup.sh
conf/: bblayers.conf  local.conf
conf.in/: Makefile.in  bblayers.conf.in  local.conf.in
